fixed footer and header spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   text-align: center;
-  padding: 2rem 0;
+  padding: 2rem 0 0;
   background-color: var(--bg-color);
   color: var(--text-color);
   font-size: 1rem;
@@ -32,6 +32,7 @@
     img {
       width: 100%;
       height: 100%;
+      filter: brightness(2);
     }
 
     &:hover {
